--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <div class="container">
     <div class="calendar-block">
       <h2>Күнтізбе</h2>
-    <div class="name"> <strong>Маусым айы</strong></div>
+    <div class="name"> <strong>Тамыз айы</strong></div>
       <div class="calendar">
         <table>
           <thead>
